--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,3 +50,14 @@ $accent: #4285F4;
 	opacity: 1;
 	transition-delay: 0s;
 }
+
+.topbar-logo .topbar-logo-link:before {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 30px;
+    background: url(../images/nevinha-logo-small.png);
+    background-size: cover;
+    margin-top: 3px;
+    margin-right: 6px;
+}
