Add perspectives animations

--- a/src/styles/_nevinha-app.scss
+++ b/src/styles/_nevinha-app.scss
@@ -6,6 +6,8 @@ $c: '#nevinha-app';
 
 #{$c} {
   .live-demo {
+    perspective: 1000px;
+
     .nevinha-app-buttons {
       width: 60%;
       padding-top: 3rem;
