--- a/src/styles/_examples.scss
+++ b/src/styles/_examples.scss
@@ -2,19 +2,38 @@ $c: '.examples';
 
 #{$c} {
 	padding: 60px 0;
+	.examples-container {
+		max-width: 100%;
+		width: 100%;
+		margin: 0 auto;
+
+		@media (min-width: 840px) {
+			max-width: 780px;
+		}
+
+		@media (min-width: 1030px) {
+			max-width: 940px;
+		}
+
+	}
 
 	.examples-images {
 		display: grid;
-		grid-template-columns: 33% 33% 33%;
+		grid-template-columns: 1fr;
+		grid-gap: 20px;
+
+		@media (min-width: 840px) {
+			grid-template-columns: repeat(3, 1fr);
+		}
 		
 		a {
 			max-width: 280px;
+			width: 100%;
 			height: 184px;
-			display: inline-block;
-			border: solid 1px #333333;
-			margin-top: 4rem;
+			display: flex;
 			justify-self: center;
 			align-self: center;
+			border: solid 1px #333333;
 			margin: 2rem 0 0;
 			position: relative;
 	
